// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDSH component general operation clicking the hostname popover should render 1`] = `
<div>
  <div
    class="input-group"
  >
    <span
      style="position: relative;"
    >
      <div
        class="input-group-addon tooltip-container tooltip-hover hostname-popover"
        popoverbutton="true"
      >
        <i
          class="fa activate-popover fa-list-ul"
        >
          <div
            class="tooltip inferno-tt right medium "
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-inner"
            >
              <span>
                Click for expanded hostlist expression.
              </span>
            </div>
          </div>
        </i>
      </div>
      <div
        class="fade popover bottom in"
      >
        <div
          class="arrow"
        />
        <h3
          class="popover-title"
        >
          Hosts
        </h3>
        <div
          class="popover-content"
        >
          <ul
            class="well"
          >
            <li>
              <span>
                oss1..2.local
              </span>
            </li>
          </ul>
        </div>
      </div>
    </span>
  </div>
  <input
    class="form-control"
    name="pdsh"
    placeholder="placeholder text"
    required=""
    type="search"
  />
  
</div>
`;

exports[`PDSH component general operation with debounce after debounce should render with debounced data after the timeout 1`] = `
<div>
  <div
    class="input-group"
  >
    <span
      style="position: relative;"
    >
      <div
        class="input-group-addon tooltip-container tooltip-hover hostname-popover"
        popoverbutton="true"
      >
        <i
          class="fa activate-popover fa-list-ul"
        >
          <div
            class="tooltip inferno-tt right medium "
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-inner"
            >
              <span>
                Click for expanded hostlist expression.
              </span>
            </div>
          </div>
        </i>
      </div>
      <div
        class="fade popover bottom in"
      >
        <div
          class="arrow"
        />
        <h3
          class="popover-title"
        >
          Hosts
        </h3>
        <div
          class="popover-content"
        >
          <ul
            class="well"
          >
            <li>
              <span>
                oss1..2
              </span>
            </li>
          </ul>
        </div>
      </div>
    </span>
  </div>
  <input
    class="form-control"
    name="pdsh"
    placeholder="placeholder text"
    required=""
    type="search"
  />
  
</div>
`;

exports[`PDSH component general operation with debounce before debounce fires should render with non-debounced data 1`] = `
<div>
  <div
    class="input-group"
  >
    <span
      style="position: relative;"
    >
      <div
        class="input-group-addon tooltip-container tooltip-hover hostname-popover"
        popoverbutton="true"
      >
        <i
          class="fa activate-popover fa-list-ul"
        >
          <div
            class="tooltip inferno-tt right medium "
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-inner"
            >
              <span>
                Click for expanded hostlist expression.
              </span>
            </div>
          </div>
        </i>
      </div>
      <div />
    </span>
  </div>
  <input
    class="form-control"
    name="pdsh"
    placeholder="placeholder text"
    required=""
    type="search"
  />
  <div
    class="tooltip inferno-tt bottom medium error-tooltip"
  >
    <div
      class="tooltip-arrow"
    />
    <div
      class="tooltip-inner"
    >
      <ul>
        <li>
          Expression required.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PDSH component general operation with initial value should render 1`] = `
<div>
  <div
    class="input-group"
  >
    <span
      style="position: relative;"
    >
      <div
        class="input-group-addon tooltip-container tooltip-hover hostname-popover"
        popoverbutton="true"
      >
        <i
          class="fa activate-popover fa-list-ul"
        >
          <div
            class="tooltip inferno-tt right medium "
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-inner"
            >
              <span>
                Click for expanded hostlist expression.
              </span>
            </div>
          </div>
        </i>
      </div>
      <div
        class="fade popover bottom in"
      >
        <div
          class="arrow"
        />
        <h3
          class="popover-title"
        >
          Hosts
        </h3>
        <div
          class="popover-content"
        >
          <ul
            class="well"
          >
            <li>
              <span>
                mds1..2.local
              </span>
            </li>
          </ul>
        </div>
      </div>
    </span>
  </div>
  <input
    class="form-control"
    name="pdsh"
    placeholder="placeholder text"
    required=""
    type="search"
  />
  
</div>
`;

exports[`PDSH component general operation with input error should render 1`] = `
<div>
  <div
    class="input-group"
  >
    <span
      style="position: relative;"
    >
      <div
        class="input-group-addon tooltip-container tooltip-hover hostname-popover"
        popoverbutton="true"
      >
        <i
          class="fa activate-popover fa-list-ul"
        >
          <div
            class="tooltip inferno-tt right medium "
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-inner"
            >
              <span>
                Click for expanded hostlist expression.
              </span>
            </div>
          </div>
        </i>
      </div>
      <div />
    </span>
  </div>
  <input
    class="form-control"
    name="pdsh"
    placeholder="placeholder text"
    required=""
    type="search"
  />
  <div
    class="tooltip inferno-tt bottom medium error-tooltip"
  >
    <div
      class="tooltip-arrow"
    />
    <div
      class="tooltip-inner"
    >
      <ul>
        <li>
          Range is not in the proper format.
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`PDSH component general operation with input should render 1`] = `
<div>
  <div
    class="input-group"
  >
    <span
      style="position: relative;"
    >
      <div
        class="input-group-addon tooltip-container tooltip-hover hostname-popover"
        popoverbutton="true"
      >
        <i
          class="fa activate-popover fa-list-ul"
        >
          <div
            class="tooltip inferno-tt right medium "
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-inner"
            >
              <span>
                Click for expanded hostlist expression.
              </span>
            </div>
          </div>
        </i>
      </div>
      
    </span>
  </div>
  <input
    class="form-control"
    name="pdsh"
    placeholder="placeholder text"
    required=""
    type="search"
  />
  
</div>
`;

exports[`PDSH component general operation without input should render 1`] = `
<div>
  <div
    class="input-group"
  >
    <span
      style="position: relative;"
    >
      <div
        class="input-group-addon tooltip-container tooltip-hover hostname-popover"
        popoverbutton="true"
      >
        <i
          class="fa activate-popover fa-list-ul"
        >
          <div
            class="tooltip inferno-tt right medium "
          >
            <div
              class="tooltip-arrow"
            />
            <div
              class="tooltip-inner"
            >
              <span>
                Click for expanded hostlist expression.
              </span>
            </div>
          </div>
        </i>
      </div>
      <div />
    </span>
  </div>
  <input
    class="form-control"
    name="pdsh"
    placeholder="placeholder text"
    required=""
    type="search"
  />
  <div
    class="tooltip inferno-tt bottom medium error-tooltip"
  >
    <div
      class="tooltip-arrow"
    />
    <div
      class="tooltip-inner"
    >
      <ul>
        <li>
          Expression required.
        </li>
      </ul>
    </div>
  </div>
</div>
`;
